Mini: Add email-subscribe page desktop styles

--- a/mini-projects/email-subscribe/index.html
+++ b/mini-projects/email-subscribe/index.html
@@ -6,37 +6,43 @@
     <title>Email Subscribe</title>
   </head>
   <body class="bg-zinc-700">
-    <article
-      class="max-w-sm flex flex-col my-auto justify-center items-center bg-zinc-800 mx-auto p-2 rounded-lg"
-    >
-      <img
-        class="h-80 object-cover w-full hover:scale-105 transition-transform"
-        src="../../assets/email-subscribe/images/image.jpg"
-        alt="A healthy diet"
-      />
-      <section class="text-white p-4">
-        <h1 class="font-serif text-center text-xl">
-          Get diet and fitness tips in your inbox.
-        </h1>
-        <p class="text-center text-sm mt-3">
-          Eat better and exercise better. Sign up for the Diet & Fitness
-          newsletter
-        </p>
-        <div class="flex flex-col items-center justify-start space-y-4 mt-4">
-          <input
-            class="w-full text-sm p-2 bg-transparent border border-zinc-700 outline-none"
-            type="text"
-            placeholder="Enter your email address"
-          />
-
-          <button
-            class="w-full p-2 bg-lime-500 text-zinc-800 rounded-md hover:opacity-75 hover:text-white transition-colors"
+    <div class="flex items-center justify-center h-screen">
+      <article
+        class="max-w-sm md:max-w-2xl flex flex-col md:flex-row my-auto justify-center items-center bg-zinc-800 mx-auto p-2 rounded-lg"
+      >
+        <img
+          class="h-80 md:h-72 rounded-lg hover:rounded-lg md:rounded-r-none object-cover w-full md:w-1/3 hover:scale-105 transition-transform"
+          src="../../assets/email-subscribe/images/image.jpg"
+          alt="A healthy diet"
+        />
+        <section
+          class="text-white p-4 md:p-8 md:px-14 text-center md:text-left"
+        >
+          <h1 class="font-serif text-xl">
+            Get diet and fitness tips in your inbox.
+          </h1>
+          <p class="text-sm mt-3">
+            Eat better and exercise better. Sign up for the Diet & Fitness
+            newsletter
+          </p>
+          <div
+            class="flex flex-col md:flex-row items-center justify-start space-y-4 md:space-y-0 md:space-x-3 mt-4"
           >
-            Subscribe
-          </button>
-        </div>
-      </section>
-    </article>
+            <input
+              class="w-full text-sm p-2 bg-transparent border border-zinc-700 outline-none"
+              type="text"
+              placeholder="Enter your email address"
+            />
+
+            <button
+              class="w-1/2 p-2 bg-lime-500 text-zinc-800 rounded-md hover:opacity-75 hover:text-white transition-colors"
+            >
+              Subscribe
+            </button>
+          </div>
+        </section>
+      </article>
+    </div>
   </body>
   <script src="https://cdn.tailwindcss.com"></script>
 </html>
